--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-openal::natives-linux"
     runtimeOnly "org.lwjgl:lwjgl-openal::natives-macos"
 
+    implementation "org.lwjgl:lwjgl"
+    implementation "org.lwjgl:lwjgl-vulkan"
+    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
+
 
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-tinyfd::$lwjglNatives"
