--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,8 @@ dependencies {
 
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-vulkan"
-    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
+    implementation "org.lwjgl:lwjgl-shaderc"
+    runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
 
 
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
