--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ jar {
     }
 
     manifest {
-        manifest.attributes["Main-Class"] = "lake.demo.Demo"
+        //manifest.attributes["Main-Class"] = "lake.demo.VulkanDemo"
 
     }
 
