--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,19 @@ plugins {
 
 project.ext.lwjglVersion = "3.3.3"
 project.ext.jomlVersion = "1.10.5"
-project.ext.imguiNatives = "natives-windows"
-
 
 
 switch (OperatingSystem.current()) {
     case OperatingSystem.LINUX:
         project.ext.lwjglNatives = "natives-linux"
+        def osArch = System.getProperty("os.arch")
+        if (osArch.startsWith("arm") || osArch.startsWith("aarch64")) {
+            project.ext.lwjglNatives += osArch.contains("64") || osArch.startsWith("armv8") ? "-arm64" : "-arm32"
+        } else if  (osArch.startsWith("ppc")) {
+            project.ext.lwjglNatives += "-ppc64le"
+        } else if  (osArch.startsWith("riscv")) {
+            project.ext.lwjglNatives += "-riscv64"
+        }
         break
     case OperatingSystem.MAC_OS:
         project.ext.lwjglNatives = "natives-macos"
@@ -23,9 +29,6 @@ switch (OperatingSystem.current()) {
         project.ext.lwjglNatives = "natives-windows"
         break
 }
-
-
-
 
 
 
@@ -44,57 +47,30 @@ sourceSets {
     }
 }
 dependencies {
+    implementation files('dependencies/jbox2d-library.jar')
+    implementation "org.joml:joml:${jomlVersion}"
+
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
-    implementation files('dependencies/jbox2d-library.jar')
-
-
     implementation "org.lwjgl:lwjgl"
-    implementation "org.lwjgl:lwjgl-glfw"
-    implementation "org.lwjgl:lwjgl-opengl"
-    implementation "org.lwjgl:lwjgl-stb"
-    implementation "org.joml:joml:${jomlVersion}"
+    implementation "org.lwjgl:lwjgl-nuklear"
     implementation "org.lwjgl:lwjgl-openal"
-
-    implementation "io.github.spair:imgui-java-app:1.86.11"
-
-
-    implementation "org.lwjgl:lwjgl"
-    implementation "org.lwjgl:lwjgl-tinyfd"
-
-
-
-
-    runtimeOnly "org.lwjgl:lwjgl::natives-windows"
-    runtimeOnly "org.lwjgl:lwjgl::natives-linux"
-    runtimeOnly "org.lwjgl:lwjgl::natives-macos"
-
-    runtimeOnly "org.lwjgl:lwjgl-glfw::natives-windows"
-    runtimeOnly "org.lwjgl:lwjgl-glfw::natives-linux"
-    runtimeOnly "org.lwjgl:lwjgl-glfw::natives-macos"
-
-    runtimeOnly "org.lwjgl:lwjgl-opengl::natives-windows"
-    runtimeOnly "org.lwjgl:lwjgl-opengl::natives-linux"
-    runtimeOnly "org.lwjgl:lwjgl-opengl::natives-macos"
-
-    runtimeOnly "org.lwjgl:lwjgl-stb::natives-windows"
-    runtimeOnly "org.lwjgl:lwjgl-stb::natives-linux"
-    runtimeOnly "org.lwjgl:lwjgl-stb::natives-macos"
-
-    runtimeOnly "org.lwjgl:lwjgl-openal::natives-windows"
-    runtimeOnly "org.lwjgl:lwjgl-openal::natives-linux"
-    runtimeOnly "org.lwjgl:lwjgl-openal::natives-macos"
-
-    implementation "org.lwjgl:lwjgl"
-    implementation "org.lwjgl:lwjgl-vulkan"
+    implementation "org.lwjgl:lwjgl-opengl"
     implementation "org.lwjgl:lwjgl-shaderc"
-    runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
-
+    implementation "org.lwjgl:lwjgl-stb"
+    implementation "org.lwjgl:lwjgl-tinyfd"
+    implementation "org.lwjgl:lwjgl-vulkan"
+    implementation "org.lwjgl:lwjgl-glfw"
 
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-tinyfd::$lwjglNatives"
-
-
+    if (lwjglNatives == "natives-macos") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
 
 
 
@@ -114,7 +90,7 @@ jar {
     }
 
     manifest {
-        //manifest.attributes["Main-Class"] = "lake.demo.VulkanDemo"
+        manifest.attributes["Main-Class"] = "lake.demo.ShowcaseDemo"
 
     }
 
