--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation "org.lwjgl:lwjgl-vulkan"
     implementation "org.lwjgl:lwjgl-glfw"
 
+    implementation 'com.esotericsoftware:kryo:5.6.0'
+
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
