--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ plugins {
 project.ext.lwjglVersion = "3.3.3"
 project.ext.jomlVersion = "1.10.5"
 
-
 switch (OperatingSystem.current()) {
     case OperatingSystem.LINUX:
         project.ext.lwjglNatives = "natives-linux"
@@ -59,6 +58,9 @@ dependencies {
     implementation "org.lwjgl:lwjgl-vulkan"
     implementation "org.lwjgl:lwjgl-glfw"
 
+    implementation "org.lwjglx:lwjgl3-awt:0.1.8"
+
+
     implementation 'com.esotericsoftware:kryo:5.6.0'
 
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
@@ -85,7 +87,7 @@ jar {
     }
 
     manifest {
-        manifest.attributes["Main-Class"] = "lake.demo.Testbed"
+        manifest.attributes["Main-Class"] = "lake.demo.ForiTestPlatform"
 
     }
 
