--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,8 @@ dependencies {
     implementation "org.lwjgl:lwjgl-vulkan"
     implementation "org.lwjgl:lwjgl-glfw"
 
-    implementation "org.lwjglx:lwjgl3-awt:0.1.8"
-
+    implementation "org.lwjgl:lwjgl-vma"
+    runtimeOnly "org.lwjgl:lwjgl-vma::$lwjglNatives"
 
     implementation 'com.esotericsoftware:kryo:5.6.0'
 
