--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,35 @@ plugins {
 }
 
 mainClassName = 'fori.demo.ForiTestPlatform'
+group 'fori.systems'
+version '0.0.1'
+
+repositories {
+    mavenCentral()
+}
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src']
+        }
+    }
+}
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
 
-project.ext.lwjglVersion = "3.3.3"
-project.ext.jomlVersion = "1.10.5"
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+
+    manifest {
+        manifest.attributes["Main-Class"] = "fori.demo.ForiTestPlatform"
+    }
+
+}
+
 
 switch (OperatingSystem.current()) {
     case OperatingSystem.LINUX:
@@ -25,74 +50,41 @@ switch (OperatingSystem.current()) {
         }
         break
     case OperatingSystem.MAC_OS:
-        project.ext.lwjglNatives = "natives-macos"
+        project.ext.lwjglNatives = System.getProperty("os.arch").startsWith("aarch64") ? "natives-macos-arm64" : "natives-macos"
         break
     case OperatingSystem.WINDOWS:
-        project.ext.lwjglNatives = "natives-windows"
+        def osArch = System.getProperty("os.arch")
+        project.ext.lwjglNatives = osArch.contains("64")
+                ? "natives-windows${osArch.startsWith("aarch64") ? "-arm64" : ""}"
+                : "natives-windows-x86"
         break
 }
 
+project.ext.lwjglVersion = "3.3.4"
+project.ext.jomlVersion = "1.10.7"
 
-
-
-group 'northern.lights'
-version '2.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-sourceSets {
-    main {
-        java {
-            srcDirs = ['src']
-        }
-    }
-}
 dependencies {
-    implementation files('dependencies/jbox2d-library.jar')
-    implementation "org.joml:joml:${jomlVersion}"
+
+    implementation 'com.esotericsoftware:kryo:5.6.0'
+
 
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     implementation "org.lwjgl:lwjgl"
-    implementation "org.lwjgl:lwjgl-openal"
-    implementation "org.lwjgl:lwjgl-shaderc"
-    implementation "org.lwjgl:lwjgl-stb"
-    implementation "org.lwjgl:lwjgl-vulkan"
     implementation "org.lwjgl:lwjgl-glfw"
-
+    implementation "org.lwjgl:lwjgl-shaderc"
+    implementation "org.lwjgl:lwjgl-spvc"
+    implementation "org.lwjgl:lwjgl-stb"
     implementation "org.lwjgl:lwjgl-vma"
-    runtimeOnly "org.lwjgl:lwjgl-vma::$lwjglNatives"
-
-    implementation 'com.esotericsoftware:kryo:5.6.0'
-
+    implementation "org.lwjgl:lwjgl-vulkan"
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-spvc::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
-    if (lwjglNatives == "natives-macos") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
-
-
-
-
-
+    runtimeOnly "org.lwjgl:lwjgl-vma::$lwjglNatives"
+    if (lwjglNatives == "natives-macos" || lwjglNatives == "natives-macos-arm64") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
+    implementation "org.joml:joml:${jomlVersion}"
 }
 
-jar {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-
-    from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-
-    manifest {
-        manifest.attributes["Main-Class"] = "fori.demo.ForiTestPlatform"
-
-    }
-
-}
 
