--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 
 
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
-
+    implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-glfw"
     implementation "org.lwjgl:lwjgl-shaderc"
@@ -83,6 +83,8 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-spvc::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-vma::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
+
     if (lwjglNatives == "natives-macos" || lwjglNatives == "natives-macos-arm64") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
 }
