Added args parsing

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 
     implementation 'com.esotericsoftware:kryo:5.6.0'
 
-
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.9.0'
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
     implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl"
