--- a/build.gradle
+++ b/build.gradle
@@ -78,8 +78,10 @@ dependencies {
     implementation "org.lwjgl:lwjgl-tinyfd"
     implementation "org.lwjgl:lwjgl-jawt"
 
+    implementation 'com.formdev:flatlaf:3.5.4'
 
     implementation files('dependencies/lwjgl3-awt-1.0.0-20181215.144757-4.jar')
+    implementation files('dependencies/flexdock-core-1.3.jar')
 
 
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
