--- a/shaders/metadata.gradle
+++ b/shaders/metadata.gradle
@@ -1,3 +1,5 @@
 ext.shaders = [
         'Default': ['vertex', 'fragment'],
+        'ShadowMapPass': ['compute'],
+        'SwapchainPass': ['vertex', 'fragment']
 ]
