--- a/build.gradle
+++ b/build.gradle
@@ -70,10 +70,11 @@ dependencies {
     implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-glfw"
-    implementation "org.lwjgl:lwjgl-shaderc"
     implementation "org.lwjgl:lwjgl-stb"
     implementation "org.lwjgl:lwjgl-vma"
     implementation "org.lwjgl:lwjgl-vulkan"
+    implementation "org.lwjgl:lwjgl-spvc"
+
 
     implementation 'dev.dominion.ecs:dominion-ecs-engine:0.9.0'
 
@@ -81,10 +82,10 @@ dependencies {
 
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-vma::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
+    implementation "org.lwjgl:lwjgl-spvc::$lwjglNatives"
 
 
     // java bindings
