--- a/shaders/metadata.gradle
+++ b/shaders/metadata.gradle
@@ -1,5 +1,7 @@
 ext.shaders = [
         'Default': ['vertex', 'fragment'],
+        'DefaultCube': ['vertex', 'fragment'],
+
         'ShadowMapPass': ['compute'],
         'SwapchainPass': ['vertex', 'fragment'],
 ]
