Lots of asset management cleanup

--- a/assets/shaders/deferred_pbr_pipeline/src/build.gradle
+++ b/assets/shaders/deferred_pbr_pipeline/src/build.gradle
@@ -31,7 +31,7 @@ shaders.each { shaderFileName, stages ->
     }
 }
 
-task compile {
+task compileShaders {
     dependsOn tasks.matching { it.name.startsWith('compile_') }
 
 }
