So much cleanup

--- a/assets/shaders/deferred_pbr_pipeline/src/metadata.gradle
+++ b/assets/shaders/deferred_pbr_pipeline/src/metadata.gradle
@@ -1,5 +1,5 @@
 ext.shaders = [
         'Default': ['vertex', 'fragment'],
-        'ShadowMapPass': ['compute'],
-        'SwapchainPass': ['vertex', 'fragment'],
+        'Lighting': ['compute'],
+        'Compose': ['vertex', 'fragment'],
 ]
