--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,9 @@ jar {
 
 project.ext.lwjglVersion = "3.3.6"
 project.ext.jomlVersion = "1.10.8"
-project.ext.physxVersion = "2.6.0"
+project.ext.physxVersion = "2.7.1"
 project.ext.dominionVersion = "0.9.0"
-project.ext.kryoVersion = "5.6.0"
+project.ext.kryoVersion = "5.6.2"
 
 switch (OperatingSystem.current()) {
     case OperatingSystem.LINUX:
@@ -98,7 +98,7 @@ dependencies {
 
         runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
         runtimeOnly "org.lwjgl:lwjgl-spvc::$lwjglNatives"
-        runtimeOnly "de.fabmax:physx-jni:2.6.0:$lwjglNatives"
+        runtimeOnly "de.fabmax:physx-jni:$physxVersion:$lwjglNatives"
 
     }
 
