--- a/assets/shaders/deferred_pbr_pipeline/src/metadata.gradle
+++ b/assets/shaders/deferred_pbr_pipeline/src/metadata.gradle
@@ -1,5 +1,6 @@
 ext.shaders = [
         'Default': ['vertex', 'fragment'],
+        'Default2': ['vertex', 'fragment'],
         'Lighting': ['compute'],
         'Compose': ['vertex', 'fragment'],
 ]
