--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ project.ext.lwjglVersion = "3.3.6"
 project.ext.jomlVersion = "1.10.8"
 project.ext.physxVersion = "2.7.1"
 project.ext.kryoVersion = "5.6.2"
+project.ext.gsonVersion = "2.13.2"
 
 switch (OperatingSystem.current()) {
     case OperatingSystem.LINUX:
@@ -83,6 +84,8 @@ dependencies {
         implementation "org.joml:joml:$jomlVersion"
         implementation "org.lwjgl:lwjgl-jawt"
         implementation files("thirdparty/lwjgl3-awt-0.2.3.jar")
+        implementation "com.google.code.gson:gson:$gsonVersion"
+
     }
 
     //Natives
